<resources>
    <string name="app_name">Organizo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="app_icon">App Icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="create_accuont">Create Accuont</string>
    <string name="welcome_text">Welcome</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_user">Already User?</string>
    <string name="please_wait">Please wait</string>
    <string name="log_out">Log out</string>
    <string name="projects">Projects</string>
    <string name="reports">Reports</string>
    <string name="home">Home</string>
    <string name="select_category">Select Category</string>
    <string name="task_name">Task Name</string>
    <string name="add_category">Choose or Add Category</string>
    <string name="add_a_descripton">Add a descripton</string>
    <string name="start_task">Start Task</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="start_time">Start Time</string>
    <string name="today">Today</string>
    <string name="change_time">Change Time</string>
    <string name="change_date">Change Date</string>
    <string name="save_task">Save Task</string>
    <string name="end_time">End Time</string>
    <string name="add_end_time">Add End Time</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="categories">Categories</string>
</resources>
