<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".User.createAccount.SignUpFragment"
        android:background="@drawable/ic_sign_up_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="99dp"
                android:layout_height="113dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_icon"
                android:src="@drawable/organizo_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_name_textinputLayout"
                        style="@style/TextInputLayout.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_name_textinput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:hint="@string/enter_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_email_textInputLayout"
                        style="@style/TextInputLayout.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_email_textInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:maxLines="2"
                            android:hint="@string/enter_email_id" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardUseCompatPadding="true"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:backgroundTint="@android:color/transparent"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_password_textInputLayout"
                        style="@style/TextInputLayout.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        app:errorEnabled="true"
                        app:helperTextEnabled="true"
                        android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_password_textInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/enter_password" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sign_up_confirm_password_textInputLayout"
                        style="@style/TextInputLayout.SignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:passwordToggleEnabled="true"
                        app:errorEnabled="true"
                        android:layout_marginBottom="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/sign_up_confirm_password_textInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:hint="@string/confirm_password" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpButton"
                style="@style/LogInButtonAppearence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/already_user_button"
                style="@style/LogInTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/already_user"
                app:layout_constraintBottom_toBottomOf="@+id/signUpButton"
                app:layout_constraintEnd_toStartOf="@+id/signUpButton"
                app:layout_constraintTop_toTopOf="@+id/signUpButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>